# clusterit

./: .gitignore  ARCHITECTURE.md  Cargo.toml  Dockerfile  README.md  config.example.toml  rust-toolchain  state.json
libs/home_path/: Cargo.toml
libs/home_path/src/: lib.rs
libs/parser/src/: error.rs  lib.rs  module.rs  parse.rs  parse_arena.rs
libs/path/src/: lib.rs
libs/path_resolver/: Cargo.toml
libs/path_resolver/src/: lib.rs
libs/prompter/: Cargo.toml
libs/prompter/src/: ansi.rs  lib.rs
modules/replace/: clusterfile
modules/setup/: setup.cf  setup.sh
modules/test/: print.cf  test.cf
script/: debug  docker  install  test
src/: clusterit.rs  device.rs  error.rs  executer.rs  lib.rs  main.rs  main_old.rs  state.rs
src/clusterit/: config.rs  connection.rs  default_config.toml  error.rs  executer.rs  mod.rs  modules.rs  setup.rs  state.rs  step_executer.rs
src/clusterit/connection/: authenticate.rs  connection_error.rs  mod.rs
src/clusterit/modules/: deb.rs
src/connection/: authenticate.rs  connection_error.rs  destination.rs  mod.rs
src/k3main/: config.rs  connection.rs  default_config.toml  mod.rs  setup.rs  state.rs  uninstall.rs
test/: Dockerfile
