[package]
name = "clusterit"
version = "0.1.0"
authors = ["Lyr-7D1h <lyr-7d1h@pm.me>"]
edition = "2018"

[[bin]]
name = "clusterit"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = { version = "0.3", default-features = false }
serde = { version = "1.0.126", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
simple_logger = "1"
anyhow = "1.0.41"
regex = "1"
rand = "0.8.4"
ssh = "0.1.4"