[package]
name = "clusterit"
version = "0.0.1"
authors = ["Lyr-7D1h <lyr-7d1h@pm.me>"]
edition = "2018"

[[bin]]
name = "clusterit"
path = "src/main.rs"

[dependencies]
prompter = { path = "./libs/prompter" }
path_resolver = { path = "./libs/path_resolver" }

structopt = { version = "0.3", default-features = false }

serde = { version = "1.0.126", features = ["derive"] }
toml = "0.5.8"

log = "0.4"
fern = "0.6.0"

# Embed own openssl version in binary using vendored-openssl
ssh2 = { version = "0.9.3", features = ["vendored-openssl"] }

regex = "1"